--- a/index.html
+++ b/index.html
@@ -5,52 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Your Name | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Optional: Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Header -->
   <header>
-    <h1>Your Name</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <div class="container">
+      <h1 class="site-title">Your Name</h1>
+      <nav class="site-nav">
+        <a href="#home">Home</a>
+        <a href="#resume">Resume</a>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
-
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      Hi! I'm a [Your Profession/Student/etc.]. I enjoy working on [skills/fields].
-      This portfolio highlights some of my work and projects.
-    </p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Project One</h3>
-      <p>Brief description of what you built and why it’s cool.</p>
-      <a href="#" target="_blank">View Project</a>
+  
+  <section id="home" class="hero">
+    <div class="container">
+      <h2>Summary</h2>
+      <p>Hi! I build things, solve problems, and write code/designs that I’m proud of. Here are my major projects and experience.</p>
     </div>
-    <div class="project">
-      <h3>Project Two</h3>
-      <p>Another short description.</p>
-      <a href="#" target="_blank">View Project</a>
+  </section>
+  
+  <section id="resume" class="experience">
+    <div class="container">
+      <h2>Experience</h2>
+      <div class="exp-item">
+        <h3>Role / Position – Company</h3>
+        <p class="exp-date">Jan 2023 – Present</p>
+        <p>Description of what you did, what you achieved, using bullet points or short paragraphs.</p>
+      </div>
+      <!-- Repeat exp-item -->
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    <p>LinkedIn: <a href="#" target="_blank">Your LinkedIn</a></p>
-    <p>GitHub: <a href="#" target="_blank">Your GitHub</a></p>
+  <section id="projects" class="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <div class="project-image"> <!-- insert image via <img> or background-image --> </div>
+          <h3>Project One</h3>
+          <p>Short description of project. What tools you used, what you built, what you learned.</p>
+          <a href="#" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <div class="project-image"></div>
+          <h3>Project Two</h3>
+          <p>Another description.</p>
+          <a href="#" target="_blank">View Project</a>
+        </div>
+        <!-- More cards -->
+      </div>
+    </div>
+  </section>
+
+  <section id="about" class="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>Here’s a bit more about me: my background, what motivates me, what I value, maybe my hobbies or extra skills.</p>
+    </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      <p>LinkedIn: <a href="#" target="_blank">Your LinkedIn</a></p>
+      <p>GitHub: <a href="#" target="_blank">Your GitHub</a></p>
+    </div>
   </section>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <div class="container">
+      <p>© 2025 Your Name</p>
+    </div>
   </footer>
 </body>
 </html>
