--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
       <h2>Experience</h2>
 
       <div class="exp-item">
-        <h3>L@ckheed M@rtin</h3>
-        <h4>Opto-Mechanical Engineer </h4> <p class="exp-date">August 2025 – Present</p>
-        <h4>Opto-Mechanical Engineer Associate </h4> <p class="exp-date">July 2023 – August 2025</p>
+        <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
+        <div class = "exp-content">
+          <h3>L@ckheed M@rtin</h3>
+          <div class = "exp-header">
+            <h4>Opto-Mechanical Engineer </h4> <span class="exp-date">August 2025 – Present</span>
+          </div>
+          
+        
+        <h4>Opto-Mechanical Engineer Associate </h4> <span class="exp-date">July 2023 – August 2025</span>
         <ul>
           <li>Lead and support complex mechanical design and documentation for opto-mechanical subsystems throughout various stages of the lifecycle.</li>
           <li> Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
