--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h2>Experience</h2>
 
       <div class="exp-item">
-        <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
+        <img src="lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
         <div class = "exp-content">
           <h3>L@ckheed M@rtin</h3>
           <div class = "exp-header">
