--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
             <h4>Opto-Mechanical Engineer </h4> <span class="exp-date">August 2025 – Present</span>
           </div>
           
-        
-        <h4>Opto-Mechanical Engineer Associate </h4> <span class="exp-date">July 2023 – August 2025</span>
+           <div class = "exp-header">
+            <h4>Opto-Mechanical Engineer Associate </h4> <span class="exp-date">July 2023 – August 2025</span>
+          </div>
         <ul>
           <li>Lead and support complex mechanical design and documentation for opto-mechanical subsystems throughout various stages of the lifecycle.</li>
           <li> Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
           <li>Deliver and participate in technical presentations to subject matter experts and stakeholders, contributing to design reviews, securing approvals, and advancing key program milestones.</li>
 
         </ul>
+        </div>
       </div>
 
       <div class="exp-item">
