--- a/index.html
+++ b/index.html
@@ -34,54 +34,75 @@
     </div>
   </section>
 
-  <!-- Resume / Experience -->
-  <section id="resume" class="experience">
-    <div class="container">
-      <h2>Experience</h2>
+<!-- Resume / Experience -->
+<section id="resume" class="experience">
+  <div class="container">
+    <h2>Experience</h2>
 
-      <div class="exp-item">
-        <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
-        <div class = "exp-content">
-          <h3>L@ckheed M@rtin</h3>
-          <div class = "exp-header">
-            <h4>Opto-Mechanical Engineer </h4> <span class="exp-date">August 2025 – Present</span>
-          </div>
-          
-           <div class = "exp-header">
-            <h4>Opto-Mechanical Engineer Associate </h4> <span class="exp-date">July 2023 – August 2025</span>
-          </div>
+    <!-- Lockheed Martin -->
+    <div class="exp-item">
+      <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
+      <div class="exp-content">
+        <div class="exp-header">
+          <h3>Lockheed Martin</h3>
+          <span class="exp-date">August 2025 – Present</span>
+        </div>
+        <h4>Opto-Mechanical Engineer</h4>
+
+        <div class="exp-header">
+          <h4>Opto-Mechanical Engineer Associate</h4>
+          <span class="exp-date">July 2023 – August 2025</span>
+        </div>
         <ul>
           <li>Lead and support complex mechanical design and documentation for opto-mechanical subsystems throughout various stages of the lifecycle.</li>
-          <li> Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
+          <li>Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
           <li>Deliver and participate in technical presentations to subject matter experts and stakeholders, contributing to design reviews, securing approvals, and advancing key program milestones.</li>
-
         </ul>
-        </div>
       </div>
+    </div>
 
-      <div class="exp-item">
-        <h3>ThermoKing Americas</h3>
-        <h4>Platform Systems Engineering Intern</h4><p class="exp-date">May 2022 – August 2022</p>
+    <!-- ThermoKing Americas -->
+    <div class="exp-item">
+      <img src="images/thermoking.png" alt="ThermoKing Logo" class="company-logo">
+      <div class="exp-content">
+        <div class="exp-header">
+          <h3>ThermoKing Americas</h3>
+          <span class="exp-date">May 2022 – August 2022</span>
+        </div>
+        <h4>Platform Systems Engineering Intern</h4>
         <ul>
-          <li>Contributed to platform systems engineering work for commercial transport refrigeration products. </li>
+          <li>Contributed to platform systems engineering work for commercial transport refrigeration products.</li>
           <li>Co-authored system documentation, including requirements and validation criteria used across testing and build phases to support engineering, service, and commercial teams.</li>
           <li>Helped improve communication across subsystem teams by organizing shared technical information.</li>
         </ul>
       </div>
-      
-      <div class="exp-item">
-        <h3>Columbia University</h3>
-        <h4>Teaching Assistant for Computer Graphics and Design </h4><p class="exp-date">September 2021 – May 2023</p>
+    </div>
+
+    <!-- Columbia University -->
+    <div class="exp-item">
+      <img src="images/columbia.png" alt="Columbia University Logo" class="company-logo">
+      <div class="exp-content">
+        <div class="exp-header">
+          <h3>Columbia University</h3>
+          <span class="exp-date">September 2021 – May 2023</span>
+        </div>
+        <h4>Teaching Assistant for Computer Graphics and Design</h4>
         <ul>
-          <li>Supported instruction for a course on computer graphics and design, leading recitations and office hours to assist students with CAD, GD&T, and SolidWorks-based design challenges. </li>
+          <li>Supported instruction for a course on computer graphics and design, leading recitations and office hours to assist students with CAD, GD&T, and SolidWorks-based design challenges.</li>
         </ul>
-        <h4>Student Intern for the Office for the EVP for Research </h4><p class="exp-date">September 2019 – May 2021</p>
+
+        <div class="exp-header">
+          <h4>Student Intern for the Office for the EVP for Research</h4>
+          <span class="exp-date">September 2019 – May 2021</span>
+        </div>
         <ul>
           <li>Analyzed and visualized federal research funding trends using Python and Excel, providing actionable insights to inform university funding strategies.</li>
         </ul>
       </div>
     </div>
-  </section>
+
+  </div>
+</section>
 
   <!-- Projects -->
   <section id="projects" class="projects">
