--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#home">About</a>
         <a href="#resume">Experience</a>
         <a href="#projects">Projects</a>
-        <a href="#about">Other</a>
+        <a href="#about">Research</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
