--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
   <!-- Hero Section -->
   <section id="home" class="hero">
-    <div class="container">
+    <div class="container hero-container">
+      <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <h2>Christine Zou </h2>
       <p class="tagline">Engineer • Designer • Problem Solver</p>
       <p class="intro">
