--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <div class="container nav-container">
-      <h1 class="site-title">Christine Zou</h1>
+      <!-- <h1 class="site-title">Christine Zou</h1>-->
       <nav class="site-nav">
         <a href="#home">About</a>
         <a href="#resume">Experience</a>
