--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <div class="container nav-container">
-      <!-- <h1 class="site-title">Christine Zou</h1>-->
-      <nav class="site-nav">
-        <a href="#home">About</a>
-        <a href="#resume">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#about">Research</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
+<header>
+<nav>
+  <ul>
+    <li><a href="index.html">About</a></li>
+    <li><a href="experience.html">Experience</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="research.html">Research</a></li>
+  </ul>
+</nav>
+</header>
 
   <!-- Hero Section -->
   <section id="home" class="hero">
