--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
   <!-- Header -->
 <header>
-<nav>
-  <ul>
-    <li><a href="index.html">About</a></li>
-    <li><a href="experience.html">Experience</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="research.html">Research</a></li>
-  </ul>
-</nav>
+  <div class="container nav-container">
+    
+    <nav class="site-nav">
+      <a href="index.html">About</a>
+      <a href="experience.html">Experience</a>
+      <a href="projects.html">Projects</a>
+      <a href="research.html">Research</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
 </header>
 
   <!-- Hero Section -->
