--- a/experience.html
+++ b/experience.html
@@ -3,24 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Experience - My Portfolio</title>
+  <title>Experience | Christine Zou</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="research.html">Research</a></li>
-      </ul>
-    </nav>
+    <div class="container nav-container">
+      <h1 class="site-title">Christine Zou</h1>
+      <nav class="site-nav">
+        <a href="index.html">About</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
+        <a href="research.html">Research</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
 
+  <!-- Main Content -->
   <main>
-    <h1>Experience</h1>
-    <p>Here’s where your work and background go.</p>
+    <section class="experience">
+      <div class="container">
+        <h2>Experience</h2>
+
+        <!-- Example Experience Item -->
+        <div class="exp-item">
+          <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
+          <div class="exp-content">
+            <div class="exp-header">
+              <h3>Lockheed Martin</h3>
+              <span class="exp-date">August 2025 – Present</span>
+            </div>
+            <h4>Opto-Mechanical Engineer</h4>
+            <div class="exp-header">
+              <h4>Opto-Mechanical Engineer Associate</h4>
+              <span class="exp-date">July 2023 – August 2025</span>
+            </div>
+            <ul>
+              <li>Lead and support complex mechanical design and documentation for opto-mechanical subsystems throughout various stages of the lifecycle.</li>
+              <li>Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
+              <li>Deliver and participate in technical presentations to subject matter experts and stakeholders.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Add more exp-item blocks as needed -->
+      </div>
+    </section>
   </main>
-</body>
-</html>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>© 2025 Christine Zou</p>
+    </div>
+  </foot
