--- a/projects.html
+++ b/projects.html
@@ -3,24 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects - My Portfolio</title>
+  <title>Projects | Christine Zou</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="research.html">Research</a></li>
-      </ul>
-    </nav>
+    <div class="container nav-container">
+      <h1 class="site-title">Christine Zou</h1>
+      <nav class="site-nav">
+        <a href="index.html">About</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
+        <a href="research.html">Research</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
 
+  <!-- Main Content -->
   <main>
-    <h1>Experience</h1>
-    <p>Here’s where your work and background go.</p>
-  </main>
-</body>
-</html>
+    <section class="projects">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <!-- Example Project Card -->
+          <div class="project-card">
+            <img src="images/project1.jpg" alt="Project One" />
+            <h3>Project One</h3>
+            <p>Short description of Project One.</p>
+            <a href="#" target="_blank">View Project</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/project2.jpg" alt="Project Two" />
+            <h3>Project Two</h3>
+            <p>Short description of Project Two.</p>
+            <a href="#" target="_blank">View Project</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/project3.jpg" alt="Project Three" />
+            <h3>Project Three</h3>
+            <p>Short description of Project Three.</p>
+            <a href=
