--- a/research.html
+++ b/research.html
@@ -3,24 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Research - My Portfolio</title>
+  <title>Research | Christine Zou</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="research.html">Research</a></li>
-      </ul>
-    </nav>
+    <div class="container nav-container">
+      <h1 class="site-title">Christine Zou</h1>
+      <nav class="site-nav">
+        <a href="index.html">About</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
+        <a href="research.html">Research</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
 
+  <!-- Main Content -->
   <main>
-    <h1>Experience</h1>
-    <p>Here’s where your work and background go.</p>
+    <section class="research">
+      <div class="container">
+        <h2>Research</h2>
+        <p>Here you can list publications, research projects, or studies you’ve contributed to. Use cards or sections to organize each item.</p>
+
+        <!-- Example Research Item -->
+        <div class="research-item">
+          <h3>Research Project Title</h3>
+          <p>Brief description of the research, methods, and outcomes.</p>
+        </div>
+
+        <div class="research-item">
+          <h3>Another Research Project</h3>
+          <p>Brief description of the research, methods, and outcomes.</p>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>© 2025 Christine Zou</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
