--- a/experience.html
+++ b/experience.html
@@ -24,35 +24,41 @@
 
   <!-- Main Content -->
   <main>
-    <section class="experience">
-      <div class="container">
-        <h2>Experience</h2>
+  <section class="experience">
+    <div class="container">
+      <h2>Experience</h2>
 
-        <!-- Example Experience Item -->
-        <div class="exp-item">
-          <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
-          <div class="exp-content">
-            <div class="exp-header">
-              <h3>Lockheed Martin</h3>
-              <span class="exp-date">August 2025 – Present</span>
-            </div>
-            <h4>Opto-Mechanical Engineer</h4>
-            <div class="exp-header">
-              <h4>Opto-Mechanical Engineer Associate</h4>
-              <span class="exp-date">July 2023 – August 2025</span>
-            </div>
-            <ul>
-              <li>Lead and support complex mechanical design and documentation for opto-mechanical subsystems throughout various stages of the lifecycle.</li>
-              <li>Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
-              <li>Deliver and participate in technical presentations to subject matter experts and stakeholders.</li>
-            </ul>
-          </div>
+      <!-- Experience Item -->
+      <div class="exp-item">
+        <div class="exp-header">
+          <h3>Lockheed Martin</h3>
+          <span class="exp-date">July 2023-Present</span>
         </div>
-
-        <!-- Add more exp-item blocks as needed -->
+        <h4>Opto-Mechanical Engineer</h4>
+        <p>Worked on designing and implementing new fixtures to improve build quality and speed of Starship prototypes.</p>
+        <ul>
+          <li>Designed laser-cut steel structures to decrease welding takt time.</li>
+          <li>Led the installation of sensors on the nosecone under tight deadlines.</li>
+        </ul>
       </div>
-    </section>
-  </main>
+
+      <!-- Additional Experience Items -->
+      <div class="exp-item">
+        <div class="exp-header">
+          <h3>Blue Origin</h3>
+          <span class="exp-date">May 2022-August 2022</span>
+        </div>
+        <h4>Platform Systems Engineering Intern</h4>
+        <p>Focused on improving the manufacturing capabilities of the New Glenn rocket assembly line.</p>
+        <ul>
+          <li>Developed proximity sensor research and testing protocols.</li>
+          <li>Designed assembly fixtures for large carbon fiber panels.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+</main>
+
 
   <!-- Footer -->
   <footer>
