--- a/experience.html
+++ b/experience.html
@@ -35,10 +35,10 @@
           <span class="exp-date">July 2023-Present</span>
         </div>
         <h4>Opto-Mechanical Engineer</h4>
-        <p>Worked on designing and implementing new fixtures to improve build quality and speed of Starship prototypes.</p>
+        <p>XXXXXXXXXXXXXXX.</p>
         <ul>
-          <li>Designed laser-cut steel structures to decrease welding takt time.</li>
-          <li>Led the installation of sensors on the nosecone under tight deadlines.</li>
+          <li>XXXXXXXXX</li>
+          <li>XXXXXXXXXXXXX</li>
         </ul>
       </div>
 
@@ -49,10 +49,10 @@
           <span class="exp-date">May 2022-August 2022</span>
         </div>
         <h4>Platform Systems Engineering Intern</h4>
-        <p>Focused on improving the manufacturing capabilities of the New Glenn rocket assembly line.</p>
+        <p>XXXXXXXXXXXX.</p>
         <ul>
-          <li>Developed proximity sensor research and testing protocols.</li>
-          <li>Designed assembly fixtures for large carbon fiber panels.</li>
+          <li>XXXXXXXXX</li>
+          <li>XXXXXXXXXXXXX</li>
         </ul>
       </div>
     </div>
