--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <div class="container nav-container">
-      
+      <h1 class="site-title">Christine Zou</h1>
       <nav class="site-nav">
         <a href="index.html">About</a>
         <a href="experience.html">Experience</a>
@@ -24,45 +24,93 @@
 
   <!-- Main Content -->
   <main>
-  <section class="experience">
-    <div class="container">
-      <h2>Experience</h2>
+    <section class="experience">
+      <div class="container">
+        <h2>Experience</h2>
 
-      <!-- Experience Item -->
-      <div class="exp-item">
-        <div class="exp-header">
-          <h3>Lockheed Martin</h3>
-          <span class="exp-date">July 2023-Present</span>
+        <!-- Lockheed Martin -->
+        <div class="exp-block">
+          <div class="exp-body">
+            <div class="exp-text">
+              <div class="exp-header">
+                <h3>Lockheed Martin</h3>
+                <span class="exp-date">July 2023 – Present</span>
+              </div>
+              <h4>Opto-Mechanical Engineer & Associate</h4>
+              <p>
+                At Lockheed Martin, I contributed to the development of high-energy laser systems as both an Opto-Mechanical Engineer Associate and, later, as a full Opto-Mechanical Engineer. 
+              </p>
+              <p>
+                My work included creating subsystem designs, verifying thermal architectures, and supporting integration efforts. I collaborated across teams, participated in design reviews, and delivered technical presentations to subject matter experts. 
+              </p>
+              <p>
+                In addition to design, I served as one of two drawing checkers for a 200-person site, helping ensure product quality and consistency as part of the digital drawing workflow.
+              </p>
+            </div>
+            <div class="exp-media">
+              <img src="images/lockheed.png" alt="Lockheed Martin Logo">
+            </div>
+          </div>
         </div>
-        <h4>Opto-Mechanical Engineer</h4>
-        <p>XXXXXXXXXXXXXXX.</p>
-        <ul>
-          <li>XXXXXXXXX</li>
-          <li>XXXXXXXXXXXXX</li>
-        </ul>
-      </div>
 
-      <!-- Additional Experience Items -->
-      <div class="exp-item">
-        <div class="exp-header">
-          <h3>Blue Origin</h3>
-          <span class="exp-date">May 2022-August 2022</span>
+        <!-- ThermoKing -->
+        <div class="exp-block">
+          <div class="exp-body">
+            <div class="exp-text">
+              <div class="exp-header">
+                <h3>ThermoKing Americas</h3>
+                <span class="exp-date">May 2022 – Aug 2022</span>
+              </div>
+              <h4>Platform Systems Engineering Intern</h4>
+              <p>
+                At ThermoKing, I supported the platform systems engineering team on commercial transport refrigeration products. 
+              </p>
+              <p>
+                My responsibilities included co-authoring system documentation with requirements and validation criteria, helping downstream teams in engineering, service, and commercial functions. 
+              </p>
+              <p>
+                I also improved communication between subsystem teams by organizing technical information into shared documentation accessible across the engineering group.
+              </p>
+            </div>
+            <div class="exp-media">
+              <img src="images/thermoking.png" alt="ThermoKing Logo">
+            </div>
+          </div>
         </div>
-        <h4>Platform Systems Engineering Intern</h4>
-        <p>XXXXXXXXXXXX.</p>
-        <ul>
-          <li>XXXXXXXXX</li>
-          <li>XXXXXXXXXXXXX</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-</main>
 
+        <!-- Columbia University -->
+        <div class="exp-block">
+          <div class="exp-body">
+            <div class="exp-text">
+              <div class="exp-header">
+                <h3>Columbia University</h3>
+                <span class="exp-date">2019 – 2023</span>
+              </div>
+              <h4>Teaching Assistant & Research Intern</h4>
+              <p>
+                As a Teaching Assistant for the Computer Graphics and Design course, I led recitations and office hours, helping students with CAD, GD&T, and SolidWorks design projects. 
+              </p>
+              <p>
+                In my internship with the Office for the EVP for Research, I analyzed federal research funding trends using Python and Excel. My visualizations informed university strategy and helped identify areas of opportunity in funding applications.
+              </p>
+            </div>
+            <div class="exp-media">
+              <img src="images/columbia.png" alt="Columbia University Logo">
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer>
     <div class="container">
       <p>© 2025 Christine Zou</p>
     </div>
-  </foot
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
