--- a/experience.html
+++ b/experience.html
@@ -23,86 +23,116 @@
   </header>
 
   <!-- Main Content -->
-  <main>
-    <section class="experience">
-      <div class="container">
-        <h2>Experience</h2>
+<main>
+  <section class="experience">
+    <div class="container">
+      <h2>Experience</h2>
 
-        <!-- Lockheed Martin -->
-        <div class="exp-block">
-          <div class="exp-body">
-            <div class="exp-text">
-              <div class="exp-header">
-                <h3>Lockheed Martin</h3>
-                <span class="exp-date">July 2023 – Present</span>
-              </div>
-              <h4>Opto-Mechanical Engineer & Associate</h4>
-              <p>
-                At Lockheed Martin, I contributed to the development of high-energy laser systems as both an Opto-Mechanical Engineer Associate and, later, as a full Opto-Mechanical Engineer. 
-              </p>
-              <p>
-                My work included creating subsystem designs, verifying thermal architectures, and supporting integration efforts. I collaborated across teams, participated in design reviews, and delivered technical presentations to subject matter experts. 
-              </p>
-              <p>
-                In addition to design, I served as one of two drawing checkers for a 200-person site, helping ensure product quality and consistency as part of the digital drawing workflow.
-              </p>
+      <!-- ================== LOCKHEED MARTIN ================== -->
+      <div class="exp-block">
+        <!-- Row 1: Logo left, intro text right -->
+        <div class="exp-row">
+          <div class="exp-media">
+            <img src="images/lockheed.png" alt="Lockheed Martin Logo">
+          </div>
+          <div class="exp-text">
+            <div class="exp-header">
+              <h3>Lockheed Martin</h3>
+              <span class="exp-date">July 2023 – Present</span>
             </div>
-            <div class="exp-media">
-              <img src="images/lockheed.png" alt="Lockheed Martin Logo">
-            </div>
+            <h4>Opto-Mechanical Engineer & Associate</h4>
+            <p>
+              At Lockheed Martin, I contributed to the development of high-energy laser systems as both an Opto-Mechanical Engineer Associate and, later, as a full Opto-Mechanical Engineer.
+            </p>
           </div>
         </div>
 
-        <!-- ThermoKing -->
-        <div class="exp-block">
-          <div class="exp-body">
-            <div class="exp-text">
-              <div class="exp-header">
-                <h3>ThermoKing Americas</h3>
-                <span class="exp-date">May 2022 – Aug 2022</span>
-              </div>
-              <h4>Platform Systems Engineering Intern</h4>
-              <p>
-                At ThermoKing, I supported the platform systems engineering team on commercial transport refrigeration products. 
-              </p>
-              <p>
-                My responsibilities included co-authoring system documentation with requirements and validation criteria, helping downstream teams in engineering, service, and commercial functions. 
-              </p>
-              <p>
-                I also improved communication between subsystem teams by organizing technical information into shared documentation accessible across the engineering group.
-              </p>
-            </div>
-            <div class="exp-media">
-              <img src="images/thermoking.png" alt="ThermoKing Logo">
-            </div>
+        <!-- Row 2: Text left, supporting media right -->
+        <div class="exp-row reverse">
+          <div class="exp-text">
+            <p>
+              I created subsystem designs, verified thermal architectures, and participated in design reviews. 
+              I also delivered technical presentations to subject matter experts and stakeholders.
+            </p>
+            <p>
+              As one of two drawing checkers for a 200-person site, I supported digital workflows and ensured product quality across deliverables.
+            </p>
+          </div>
+          <div class="exp-media">
+            <img src="images/lockheed-lab.jpg" alt="Lockheed Lab Work">
           </div>
         </div>
-
-        <!-- Columbia University -->
-        <div class="exp-block">
-          <div class="exp-body">
-            <div class="exp-text">
-              <div class="exp-header">
-                <h3>Columbia University</h3>
-                <span class="exp-date">2019 – 2023</span>
-              </div>
-              <h4>Teaching Assistant & Research Intern</h4>
-              <p>
-                As a Teaching Assistant for the Computer Graphics and Design course, I led recitations and office hours, helping students with CAD, GD&T, and SolidWorks design projects. 
-              </p>
-              <p>
-                In my internship with the Office for the EVP for Research, I analyzed federal research funding trends using Python and Excel. My visualizations informed university strategy and helped identify areas of opportunity in funding applications.
-              </p>
-            </div>
-            <div class="exp-media">
-              <img src="images/columbia.png" alt="Columbia University Logo">
-            </div>
-          </div>
-        </div>
-
       </div>
-    </section>
-  </main>
+
+      <!-- ================== THERMOKING ================== -->
+      <div class="exp-block">
+        <!-- Row 1: Logo left, intro text right -->
+        <div class="exp-row">
+          <div class="exp-media">
+            <img src="images/thermoking.png" alt="ThermoKing Logo">
+          </div>
+          <div class="exp-text">
+            <div class="exp-header">
+              <h3>ThermoKing Americas</h3>
+              <span class="exp-date">May 2022 – Aug 2022</span>
+            </div>
+            <h4>Platform Systems Engineering Intern</h4>
+            <p>
+              At ThermoKing, I supported the platform systems engineering team on commercial transport refrigeration products. 
+              My role emphasized system documentation, requirements definition, and validation criteria.
+            </p>
+          </div>
+        </div>
+
+        <!-- Row 2: Text left, supporting media right -->
+        <div class="exp-row reverse">
+          <div class="exp-text">
+            <p>
+              I co-authored documents used across engineering, service, and commercial teams, and helped improve collaboration by organizing shared technical resources.
+            </p>
+          </div>
+          <div class="exp-media">
+            <img src="images/thermoking-system.jpg" alt="ThermoKing Refrigeration System">
+          </div>
+        </div>
+      </div>
+
+      <!-- ================== COLUMBIA UNIVERSITY ================== -->
+      <div class="exp-block">
+        <!-- Row 1: Logo left, intro text right -->
+        <div class="exp-row">
+          <div class="exp-media">
+            <img src="images/columbia.png" alt="Columbia University Logo">
+          </div>
+          <div class="exp-text">
+            <div class="exp-header">
+              <h3>Columbia University</h3>
+              <span class="exp-date">2019 – 2023</span>
+            </div>
+            <h4>Teaching Assistant & Research Intern</h4>
+            <p>
+              At Columbia, I supported the Computer Graphics and Design course, leading recitations and office hours to help students with CAD, GD&T, and SolidWorks design challenges.
+            </p>
+          </div>
+        </div>
+
+        <!-- Row 2: Text left, supporting media right -->
+        <div class="exp-row reverse">
+          <div class="exp-text">
+            <p>
+              As an intern for the Office for the EVP for Research, I analyzed federal funding trends using Python and Excel, generating visualizations that informed university research strategy.
+            </p>
+          </div>
+          <div class="exp-media">
+            <img src="images/columbia-research.jpg" alt="Columbia Research Work">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+</main>
+
 
   <!-- Footer -->
   <footer>
