--- a/experience.html
+++ b/experience.html
@@ -64,6 +64,7 @@
         </div>
       </div>
 
+<div class="exp-separator"></div> <!-- full-width bar -->
       <!-- ================== THERMOKING ================== -->
       <div class="exp-block">
         <!-- Row 1: Logo left, intro text right -->
