--- a/experience.html
+++ b/experience.html
@@ -97,7 +97,7 @@
           </div>
         </div>
       </div>
-
+<div class="exp-separator"></div>
       <!-- ================== COLUMBIA UNIVERSITY ================== -->
       <div class="exp-block">
         <!-- Row 1: Logo left, intro text right -->
