--- a/experience.html
+++ b/experience.html
@@ -30,25 +30,27 @@
 
       <!-- ================== LOCKHEED MARTIN ================== -->
       <div class="exp-block">
+        <!-- Centered title -->
+        <div class="exp-title">
+          <h3>Lockheed Martin</h3>
+          <h4>Opto-Mechanical Engineer & Associate</h4>
+          <span class="exp-date">July 2023 – Present</span>
+        </div>
+
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
             <img src="images/lockheed.png" alt="Lockheed Martin Logo">
           </div>
           <div class="exp-text">
-            <div class="exp-header">
-              <h3>Lockheed Martin</h3>
-              <span class="exp-date">July 2023 – Present</span>
-            </div>
-            <h4>Opto-Mechanical Engineer & Associate</h4>
             <p>
-              At Lockheed Martin, I contributed to the development of high-energy laser systems as both an Opto-Mechanical Engineer Associate and, later, as a full Opto-Mechanical Engineer.
+              At Lockheed Martin, I contributed to the development of high-energy laser systems in both associate and full engineer roles.
             </p>
           </div>
         </div>
 
-        <!-- Row 2: Text left, supporting media right -->
-        <div class="exp-row reverse">
+        <!-- Row 2: Text left, media right -->
+        <div class="exp-row second">
           <div class="exp-text">
             <p>
               I created subsystem designs, verified thermal architectures, and participated in design reviews. 
@@ -64,20 +66,23 @@
         </div>
       </div>
 
-<div class="exp-separator"></div> <!-- full-width bar -->
+      <div class="exp-separator"></div>
+
       <!-- ================== THERMOKING ================== -->
       <div class="exp-block">
+        <!-- Centered title -->
+        <div class="exp-title">
+          <h3>ThermoKing Americas</h3>
+          <h4>Platform Systems Engineering Intern</h4>
+          <span class="exp-date">May 2022 – Aug 2022</span>
+        </div>
+
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
             <img src="images/thermoking.png" alt="ThermoKing Logo">
           </div>
           <div class="exp-text">
-            <div class="exp-header">
-              <h3>ThermoKing Americas</h3>
-              <span class="exp-date">May 2022 – Aug 2022</span>
-            </div>
-            <h4>Platform Systems Engineering Intern</h4>
             <p>
               At ThermoKing, I supported the platform systems engineering team on commercial transport refrigeration products. 
               My role emphasized system documentation, requirements definition, and validation criteria.
@@ -85,8 +90,8 @@
           </div>
         </div>
 
-        <!-- Row 2: Text left, supporting media right -->
-        <div class="exp-row reverse">
+        <!-- Row 2: Text left, media right -->
+        <div class="exp-row second">
           <div class="exp-text">
             <p>
               I co-authored documents used across engineering, service, and commercial teams, and helped improve collaboration by organizing shared technical resources.
@@ -97,28 +102,32 @@
           </div>
         </div>
       </div>
-<div class="exp-separator"></div>
+
+      <div class="exp-separator"></div>
+
       <!-- ================== COLUMBIA UNIVERSITY ================== -->
       <div class="exp-block">
+        <!-- Centered title -->
+        <div class="exp-title">
+          <h3>Columbia University</h3>
+          <h4>Teaching Assistant & Research Intern</h4>
+          <span class="exp-date">2019 – 2023</span>
+        </div>
+
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
             <img src="images/columbia.png" alt="Columbia University Logo">
           </div>
           <div class="exp-text">
-            <div class="exp-header">
-              <h3>Columbia University</h3>
-              <span class="exp-date">2019 – 2023</span>
-            </div>
-            <h4>Teaching Assistant & Research Intern</h4>
             <p>
-              At Columbia, I supported the Computer Graphics and Design course, leading recitations and office hours to help students with CAD, GD&T, and SolidWorks design challenges.
+              As a Teaching Assistant for the Computer Graphics and Design course, I led recitations and office hours, helping students with CAD, GD&T, and SolidWorks design challenges.
             </p>
           </div>
         </div>
 
-        <!-- Row 2: Text left, supporting media right -->
-        <div class="exp-row reverse">
+        <!-- Row 2: Text left, media right -->
+        <div class="exp-row second">
           <div class="exp-text">
             <p>
               As an intern for the Office for the EVP for Research, I analyzed federal funding trends using Python and Excel, generating visualizations that informed university research strategy.
@@ -133,6 +142,7 @@
     </div>
   </section>
 </main>
+
 
 
   <!-- Footer -->
