--- a/experience.html
+++ b/experience.html
@@ -33,14 +33,14 @@
         <!-- Centered title -->
         <div class="exp-title">
           <h3>Lockheed Martin</h3>
-          <h4>Opto-Mechanical Engineer & Associate</h4>
+          <h4>Opto-Mechanical Engineer</h4>
           <span class="exp-date">July 2023 – Present</span>
         </div>
 
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/lockheed.png" alt="Lockheed Martin Logo">
+            <img src="images/lm-hel.png" alt="Lockheed Martin HEL">
           </div>
           <div class="exp-text">
             <p>
@@ -61,7 +61,7 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/lockheed-lab.jpg" alt="Lockheed Lab Work">
+            <img src="images/lm-helsi.jpg" alt="Lockheed Martin HEL">
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/thermoking.png" alt="ThermoKing Logo">
+            <img src="images/tk-trailer.jpg" alt="ThermoKing Trailers">
           </div>
           <div class="exp-text">
             <p>
@@ -98,7 +98,7 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/thermoking-system.jpg" alt="ThermoKing Refrigeration System">
+            <img src="images/tk-vehicles.jpg" alt="ThermoKing Vehicles">
           </div>
         </div>
       </div>
