--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,7 @@
           </div>
           <div class="exp-text">
             <p>
-              At Lockheed Martin, I contributed to the development of high-energy laser systems in both associate and full engineer roles.
+              At Lockheed Martin, I contribute to the development of opto-mechanical systems through complex mechanical design and documentation, developing integration and testing plans, and participating in technical presentations to help advance key program milestones.
             </p>
           </div>
         </div>
@@ -53,11 +53,10 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              I created subsystem designs, verified thermal architectures, and participated in design reviews. 
-              I also delivered technical presentations to subject matter experts and stakeholders.
+              Key Accomplishments:
             </p>
             <p>
-              As one of two drawing checkers for a 200-person site, I supported digital workflows and ensured product quality across deliverables.
+              Skills:
             </p>
           </div>
           <div class="exp-media">
