--- a/experience.html
+++ b/experience.html
@@ -53,10 +53,10 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              Key Accomplishments:
+              <b>Key Accomplishments:</b>
             </p>
             <p>
-              Skills:
+              <strong>Skills:</strong>
             </p>
           </div>
           <div class="exp-media">
