--- a/experience.html
+++ b/experience.html
@@ -54,8 +54,9 @@
           <div class="exp-text">
             <p>
               <b>Key Accomplishments:</b>
-              <li>Independently designed initial concept for novel subsystem model from scratch for new product and presented it at a Concept of Design Review for Subject Matter Experts and stackholders</li>
-              <li>Designed thermal layout of liquid cooling systems for lab upgrades &mdash created P&ID, selected hose lengths and sizes, authored Statement of Work and Interface Control Document</li>
+              <li>Independently designed initial concept for novel subsystem module for new product and presented it at a Concept of Design Review for Subject Matter Experts and stakeholders</li>
+              <li>Designed thermal layout of liquid cooling systems for lab upgrades &mdash; created P&ID, selected hose lengths and sizes, authored Statement of Work and Interface Control Document</li>
+              <li>One of two DSR6 checkers for entire L&SS organization (~150-200 employees)</li>            
             </p>
             <p>
               <strong>Skills:</strong> CAD (Creo Parametric, SolidWorks), Engineering Drawings, GD&T, DFM, DFA, Tooling Design, MacroFlow
