--- a/experience.html
+++ b/experience.html
@@ -96,7 +96,12 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              I co-authored documents used across engineering, service, and commercial teams, and helped improve collaboration by organizing shared technical resources.
+              <b>Key Accomplishments</b>
+              <li>Co-authored system documentation, including requirements and validation criteria to be used across testing and build phases to support engineering, service, and commercial teams</li>
+              <li>Built a design structure matrix to map subsystem interactions and support early-stage risk identification</li>
+            </p>
+            <p>
+              <b>Skills:</b> System Modeling, System Requirements, Microsoft Office
             </p>
           </div>
           <div class="exp-media">
