--- a/experience.html
+++ b/experience.html
@@ -96,7 +96,7 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              <b>Key Accomplishments</b>
+              <b>Key Accomplishments:</b>
               <li>Co-authored system documentation, including requirements and validation criteria to be used across testing and build phases to support engineering, service, and commercial teams</li>
               <li>Built a design structure matrix to map subsystem interactions and support early-stage risk identification</li>
             </p>
