--- a/experience.html
+++ b/experience.html
@@ -120,9 +120,42 @@
       <div class="exp-block">
         <!-- Centered title -->
         <div class="exp-title">
-          <h3>Columbia University</h3>
-          <h4>Teaching Assistant & Research Intern</h4>
-          <span class="exp-date">2019 – 2023</span>
+          <h3>Columbia University &mdash; Department of Mechanical Engineering</h3>
+          <h4>Teaching Assistant for Computer Graphics and Design</h4>
+          <span class="exp-date">September 2021 - May 2023</span>
+        </div>
+
+        <!-- Row 1: Logo left, intro text right -->
+        <div class="exp-row">
+          <div class="exp-media">
+            <img src="images/columbia.png" alt="Columbia University Logo">
+          </div>
+          <div class="exp-text">
+            <p>
+              As a Teaching Assistant for the Computer Graphics and Design course, I led recitations and office hours, helping students with CAD, GD&T, and SolidWorks design challenges.
+            </p>
+          </div>
+        </div>
+
+        <!-- Row 2: Text left, media right -->
+        <div class="exp-row second">
+          <div class="exp-text">
+            <p>
+              As an intern for the Office for the EVP for Research, I analyzed federal funding trends using Python and Excel, generating visualizations that informed university research strategy.
+            </p>
+          </div>
+          <div class="exp-media">
+            <img src="images/columbia-research.jpg" alt="Columbia Research Work">
+          </div>
+        </div>
+      </div>
+
+      <div class="exp-block">
+        <!-- Centered title -->
+        <div class="exp-title">
+          <h3>Columbia University &mdash; Office of the EVP for Research</h3>
+          <h4>Special Projects Student Intern</h4>
+          <span class="exp-date">September 2019 - May 2021</span>
         </div>
 
         <!-- Row 1: Logo left, intro text right -->
