--- a/experience.html
+++ b/experience.html
@@ -150,6 +150,8 @@
         </div>
       </div>
 
+      <div class="exp-separator"></div>
+      
       <div class="exp-block">
         <!-- Centered title -->
         <div class="exp-title">
